--- a/3-OY/Lesson 11/index.html
+++ b/3-OY/Lesson 11/index.html
@@ -12,8 +12,10 @@
     
    <div class="container">
     <form class="form">
-        <label for="birthday">Birthday:</label>
-        <input type="date" id="birthday" class="int form-control" name="birthday">
+        <label>Birthday:</label>
+        <input type="number" class="int1 form-control">
+        <input type="number" class="int2 form-control">
+        <input type="number" class="int3 form-control">
         <input type="submit" class="btn btn-success">
       </form>
    </div>
